--- a/index.html
+++ b/index.html
@@ -23,14 +23,9 @@
     </style>
 </head>
 <body>
-    <div class="hello_git">
-        <br><br><br><br>
-        <ul>
-            <li>哒哒哒</li>
-            <li>哒哒哒</li>
-            <li>哒哒哒</li>
-        </ul>
-    </div>
+    <h1>这是今天的案例作业</h1>
+    <ul> <li><a href="https://875227622.github.io/875227621/">这是案例作业一</a></li>
+    <li> <a href="http://www.baidu.com">这是案例作业二</a></ul></li>
 
 </body>
 </html>
