--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>  
 <meta charset="utf-8">
-<title>SEASKY系列教程</title>
+<title>day too作业</title>
     <style>
         .hello_git
         {
             width:500px;
             height:300px;
-            background:black;
+            background:rgb(252, 252, 252);
             margin: auto;
             margin-top:300px;
             border-radius: 10px;
@@ -16,7 +16,7 @@
         .hello_git li
         {
 
-            color: aliceblue;
+            color: rgb(1, 8, 14);
             margin-top:10px;
             margin-left:40px;
         }
@@ -27,7 +27,7 @@
         <br><br><br><br>
         <ul>
             <li><a href="https://875227622.github.io/875227621/">这是案例作业一</a></li>
-            <li><a href="http://www.baidu.com"></li>
+            <li><a href="http://www.baidu.com">这是案例作业二</li>
             <li>哒哒哒</li>
         </ul>
     </div>
